--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -1,4 +1,4 @@
-\section{Synchrotron radiation} \label{SIXS}
+\section{Synchrotron radiation and facility} \label{sec:SIXS}
 
 Presentation of the MED environment ... 
 
@@ -13,12 +13,3 @@ theta two theta is mu gamma or omega delta
 
 \subsubsection{Residual Gas Analyser}
 
-
-\subsection{Intensity of a Bragg peak}
-Neglecting absorption, the intensity of a Bragg peak $I_{nuc}$ as a function of its Miller indices \textit{hkl} and of $2\theta$ can be written as:
-
-\begin{equation}
-    \label{eq:PeakIntensity}
-    I_{nuc} = A \times |F_{hkl}|^2  \times j_{hkl} \times L(2\theta) \times \exp{(-2W)}
-\end{equation}
-where A is an instrument constant.
