--- a/main.tex
+++ b/main.tex
@@ -92,7 +92,7 @@
 \usepackage[utf8]{inputenc} % Use accents in source code, load before biblatex
 \usepackage[T1]{fontenc} % Show accents in output
 
-\usepackage[style=authoryear,sorting=none]{biblatex}
+\usepackage[style=authoryear,sorting=nyt]{biblatex}
 %    nty Sort by name, title, year.
 %    nyt Sort by name, year, title.
 %    nyvt Sort by name, year, volume, title.
@@ -216,10 +216,10 @@
     % \input{Sections/2_Theory_Models/Catalysis}
     \input{Sections/2_Theory_Models/X-ray_interaction_matter}
     \input{Sections/2_Theory_Models/SXRD}
-    % \input{Sections/2_Theory_Models/BCDI}
+    \input{Sections/2_Theory_Models/BCDI}
     % \input{Sections/2_Theory_Models/XPS}
     \input{Sections/2_Theory_Models/SixS}
-    % \input{Sections/2_Theory_Models/Jupyter}
+    \input{Sections/2_Theory_Models/ComputerPrograms}
     
 % % Results
 %     \chapter{Results}
