--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -1,9 +1,10 @@
-\section{x-ray interaction with matter}
+\newpage
+\section{X-ray interaction with matter} \label{sec:XRIntMatter}
 
 Understanding the different mechanisms at play when photons interact with matter is of crucial importance to be able to decide how to use x-rays as a probe in material science.
 Each phenomenon (absorption, scattering, \textit{etc}) is at the source of different techniques, diffraction brings surface x-ray diffraction (SXRD) and Bragg coherent diffraction imaging (BCDI), two techniques used in the frame of this thesis that give complementary information about the sample structure bulk and surface.
 
-x-ray absorption together with the photoelectric effect explained by Einstein in 1905 are at the source of a third technique used, x-ray photoelectron spectroscopy, which yields information specific to the nature of the adsorbates on the sample's surface.
+X-ray absorption together with the photoelectric effect explained by Einstein in 1905 are at the source of a third technique used, x-ray photoelectron spectroscopy, which yields information specific to the nature of the adsorbates on the sample's surface.
 
 \begin{table}[!htb]
     \centering
@@ -185,7 +186,7 @@ By integrating over the volume occupied by the atom we obtain the total contribu
 \end{equation}
 
 The scattering amplitude as a function of $\vec{q}$ is described by the atomic from factor $f^0(\vec{q})$, which is defined as the Fourier transform of the electronic density $\rho(\vec{r})$.
-This hypothesis is at the basis of several techniques such as Bragg coherent diffraction imaging for which we use Fourier transforms to compute the scattered amplitude (sec. \ref{BCDI}).
+This hypothesis is at the basis of several techniques such as Bragg coherent diffraction imaging for which we use Fourier transforms to compute the scattered amplitude (sec. \ref{sec:BCDI}).
 
 The values for the atomic from factor can be approximated by a sum of Gaussians using tabulated coefficients (eq. \ref{eq:AtomicFormFactorTab}) available online \parencite{InterTablesOfCryst}.
 It decreases with $\vec{q}$ (or $\sin(\theta) / \lambda)$ as illustrated in figure \ref{fig:atomic_form_factor}.
@@ -209,7 +210,7 @@ This difference in scattering intensity between elements becomes crucial when wo
 \end{figure}
 
 
-\subsection{Refraction, reflection and absorption effects}\label{RefractionReflectionAbsorption}
+\subsection{Refraction, reflection and absorption effects}\label{sec:RefractionReflectionAbsorption}
 
 For now we have considered the electron as free.
 However, electrons in atoms or molecules exist in discrete bound states (characterised by a binding energy $E_b$), and their response to the incoming electromagnetic field becomes dependent on the incoming energy.
@@ -239,7 +240,7 @@ During simple experiments, when x-rays impinge on a plane surface between air ($
 Below a certain incident angle known as the \textit{critical angle} $\alpha_c$ between the direction of the incident x-rays and the plane interface, the x-rays will be totally reflected.
 This effect is used in focussing mirrors for optics but also in techniques used to probe the surface of materials to obtain information about the surface density since the critical angle is approximately equal to $\sqrt{2\delta}$ \parencite{Willmott}.
 Moreover, during surface x-ray diffraction, the incoming angle perpendicular to the surface is kept to very low values approaching the critical angle to limit the volume probed by the x-rays to increase the contrast between the amplitude of the x-rays scattered from the bulk in regard to the x-rays scattered from the latest surface layers.
-The penetration depth of the x-rays in the material is detailed is sec. \ref{SXRD}.
+The penetration depth of the x-rays in the material is detailed is sec. \ref{sec:SXRD}.
 
 Far from the binding energies of the electron in the system, the correction factor $f'$ in the expression of $\delta$ can be ignored and the sum in eq. \ref{eq:delta} is then equal to the electronic density of the system.
 
@@ -407,7 +408,7 @@ From eqs. \ref{eq:QSinTheta} and \ref{eq:Bragglaw}, we fall back on the Laue con
 
 When fulfilling the Laue (or Bragg) condition, the direction of the scattering vector is perpendicular to the crystalline planes represented by the ($h, k, l$) Miller indices, and its magnitude is inversely proportional to the distance between consecutive crystalline planes.
 
-\subsection{Structure factor}
+\subsection{Structure factor} \label{sec:StructureFactor}
 
 On one hand, in real space, the crystal electronic density can be formed by repeating the unit cell at each lattice point, \textit{i.e.} it can be represented as a convolution of the lattice and unit cell functions.
 %The electronic density $\vec{r}$ is formed by repeating the lattice function at each lattice point and adding the basis function associated with that lattice point.
@@ -466,7 +467,7 @@ Systematic extinctions ($F_{uc} = 0$) occur when certain diffraction peaks are f
 For example in the FCC lattice of Platinum, systematic extinctions occur when the value of Miller indices are not all even or all odds.
 Otherwise, the intensity of a Bragg peak detected at the scattering vector $\vec{q}$ is equal to $4\times f_{Pt}(\vec{q})$ where $f_{Pt}(\vec{q})$ is the atomic scattering factor of Platinum.
 
-\subsection{Lattice factor} \label{LatticeFactor}
+\subsection{Lattice factor} \label{sec:LatticeFactor}
 
 If the scattering factor considers the composition of the unit cell, the lattice factor represents the contribution of the crystal lattice to the overall scattering amplitude.
 It takes into account the arrangement of atoms or scatterers within the crystal lattice and their interaction with the incident wave.
@@ -498,10 +499,10 @@ To resume, the lattice factor $F_{lat}(\vec{q})$ defines the shape of Bragg peak
 For a large crystal (\textit{i.e.} a large number of unit cells in three directions), ideal Bragg peaks will look like Dirac functions (in reality they are widened due to different experimental factors).
 For a small crystal such as nanoparticles, the fringes of the lattice factor will be further apart and their intensity more visible in contrast to the intensity of the main peak (fig. ).
 In a more general sense, the lattice factor is the Fourier transform of the crystal's lattice, the effect of the Fourier transform is that fringes will be visible in the reciprocal space in directions perpendicular to the crystal's surface (fig. ).
-The ability to effectively sample these fringes during experiments is at the root of the BCDI technique, to be able to perform the inverse Fourier transform of the Bragg peak to then retrieve the crystal shape (sec. \ref{BCDI}).
+The ability to effectively sample these fringes during experiments is at the root of the BCDI technique, to be able to perform the inverse Fourier transform of the Bragg peak to then retrieve the crystal shape (sec. \ref{sec:BCDI}).
 
 
-\subsection{Coherence}
+\subsection{Coherence} \label{sec:Coherence}
 
 Every x-ray source can be described by several parameters.
 The brilliance is a measure of the distribution of flux in both space and angular range, it indicates how the flux is spread over the source area and solid angle.
@@ -549,16 +550,16 @@ By assuming that the source has a Gaussian profile, we can relate $D$ to the sta
 At synchrotrons, the vertical and horizontal source size are significantly different due to the shape of the electron beam, much more extended in the horizontal plane.
 The horizontal coherence length is usually smaller and the limiting factor.
 By multiplying the two transverse coherence lengths $L_{T,x}$, $L_{T,y}$ and the longitudinal coherence length $L_L$ we obtain the coherent volume.
-An example if given in sec. \ref{SIXS} for the SixS beamline of the synchrotron SOLEIL.
+An example if given in sec. \ref{sec:SIXS} for the SixS beamline of the synchrotron SOLEIL.
 
 To perform Bragg coherent diffraction imaging experiments for which the coherent volume must be larger than the sample, the beamline must have low vertical and horizontal emittances, high monochromaticity and a sample environment situated as far as possible from the source.
 Indeed, to be able to resolve the interference fringes resulting from the lattice factor, a high brilliance is crucial since the intensity of the total scattered field, proportional to the scattering volume, is weak.
-A detailed explanation of how to optimize BCDI experiments is given in sec. \ref{BCDI}.
+A detailed explanation of how to optimize BCDI experiments is given in sec. \ref{sec:BCDI}.
 
 \textit{
 So far we have limited ourselves to the kinematical approach of diffraction in the frame of this thesis.
 This means that multiple scattering and effect of absorption and refraction are ignored during diffraction.
-We will see in sec. that for BCDI, multiple scattering imposes an upper limit on particle size if in the kinematical approach while effect of absorption and refraction can be corrected.
+We will see in sec. \ref{sec:BCDI} that for BCDI, multiple scattering imposes an upper limit on particle size if in the kinematical approach while effect of absorption and refraction can be corrected.
 This is justified for Surface x-ray diffraction by the fact that the incoming angle is very low ($\approx 0.3$) and for BCDI by the low volume of the sample ($\approx 0.1 \mu m^3$).
 We have also assumed that the incident wave is plane and that the phase of the incident wave is the same within the scattering volume.
 }
